--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
     "@ngrx/effects": "^9.1.0",
-    "@ngrx/store": "^9.1.0",
+    "@ngrx/router-store": "^9.1.2",
+    "@ngrx/store": "^9.1.2",
     "@ngrx/store-devtools": "^9.1.0",
     "font-awesome": "^4.7.0",
     "primeicons": "^2.0.0",
